ghc-6.2/hslibs/win32/Win32Bitmap_stub_ffi.h

extern unsigned int prim_sRCCOPY();
extern unsigned int prim_sRCPAINT();
extern unsigned int prim_sRCAND();
extern unsigned int prim_sRCINVERT();
extern unsigned int prim_sRCERASE();
extern unsigned int prim_nOTSRCCOPY();
extern unsigned int prim_nOTSRCERASE();
extern unsigned int prim_mERGECOPY();
extern unsigned int prim_mERGEPAINT();
extern unsigned int prim_pATCOPY();
extern unsigned int prim_pATPAINT();
extern unsigned int prim_pATINVERT();
extern unsigned int prim_dSTINVERT();
extern unsigned int prim_bLACKNESS();
extern unsigned int prim_wHITENESS();
extern unsigned int prim_mAKEROP4(unsigned int arg1,unsigned int arg2);
extern void prim_setBITMAP(BITMAP * arg1,LONG gc_arg2,LONG gc_arg3,LONG gc_arg4,LONG gc_arg5,WORD gc_arg6,WORD gc_arg7,LPVOID gc_arg8);
extern void* prim_deleteBitmap(HBITMAP arg1);
extern int access_prim_deleteBitmap_gc_failed(HsPtr);
extern void* access_prim_deleteBitmap_gc_failstring(HsPtr);
extern void* prim_createCompatibleBitmap(HDC arg1,int arg2,int arg3);
extern HBITMAP access_prim_createCompatibleBitmap_res1(HsPtr);
extern int access_prim_createCompatibleBitmap_gc_failed(HsPtr);
extern void* access_prim_createCompatibleBitmap_gc_failstring(HsPtr);
extern void* prim_createBitmap(INT arg1,INT arg2,UINT arg3,UINT arg4,LPVOID arg5);
extern HBITMAP access_prim_createBitmap_res1(HsPtr);
extern int access_prim_createBitmap_gc_failed(HsPtr);
extern void* access_prim_createBitmap_gc_failstring(HsPtr);
extern void* prim_createBitmapIndirect(BITMAP * arg1);
extern HBITMAP access_prim_createBitmapIndirect_res1(HsPtr);
extern int access_prim_createBitmapIndirect_gc_failed(HsPtr);
extern void* access_prim_createBitmapIndirect_gc_failstring(HsPtr);
extern void* prim_createDIBPatternBrushPt(LPVOID arg1,DWORD arg2);
extern HBRUSH access_prim_createDIBPatternBrushPt_res1(HsPtr);
extern int access_prim_createDIBPatternBrushPt_gc_failed(HsPtr);
extern void* access_prim_createDIBPatternBrushPt_gc_failstring(HsPtr);
extern void* prim_getBitmapDimensionEx(HBITMAP h);
extern LONG access_prim_getBitmapDimensionEx_gc_res1(HsPtr);
extern LONG access_prim_getBitmapDimensionEx_gc_res2(HsPtr);
extern int access_prim_getBitmapDimensionEx_gc_failed(HsPtr);
extern void* access_prim_getBitmapDimensionEx_gc_failstring(HsPtr);