ghc-6.2/hslibs/win32/Win32Bitmap.hs

module Win32Bitmap where

import StdDIS
import Win32Types
import GDITypes


----------------------------------------------------------------
-- Resources
----------------------------------------------------------------

-- Yoiks - name clash
-- %dis bitmap x = addr ({LPTSTR} x)
-- 
-- type Bitmap = LPCTSTR
-- 
-- intToBitmap :: Int -> Bitmap
-- intToBitmap i = makeIntResource (toWord i)
-- 
-- %fun LoadBitmap :: MbHINSTANCE -> Bitmap -> IO HBITMAP
-- %fail { res1 == 0 } { ErrorString("LoadBitmap") }
--  
-- %const Bitmap  
-- % [ OBM_CLOSE        = { MAKEINTRESOURCE(OBM_CLOSE)       }
-- % , OBM_UPARROW      = { MAKEINTRESOURCE(OBM_UPARROW)     }
-- % , OBM_DNARROW      = { MAKEINTRESOURCE(OBM_DNARROW)     }
-- % , OBM_RGARROW      = { MAKEINTRESOURCE(OBM_RGARROW)     }
-- % , OBM_LFARROW      = { MAKEINTRESOURCE(OBM_LFARROW)     }
-- % , OBM_REDUCE       = { MAKEINTRESOURCE(OBM_REDUCE)      }
-- % , OBM_ZOOM         = { MAKEINTRESOURCE(OBM_ZOOM)        }
-- % , OBM_RESTORE      = { MAKEINTRESOURCE(OBM_RESTORE)     }
-- % , OBM_REDUCED      = { MAKEINTRESOURCE(OBM_REDUCED)     }
-- % , OBM_ZOOMD        = { MAKEINTRESOURCE(OBM_ZOOMD)       }
-- % , OBM_RESTORED     = { MAKEINTRESOURCE(OBM_RESTORED)    }
-- % , OBM_UPARROWD     = { MAKEINTRESOURCE(OBM_UPARROWD)    }
-- % , OBM_DNARROWD     = { MAKEINTRESOURCE(OBM_DNARROWD)    }
-- % , OBM_RGARROWD     = { MAKEINTRESOURCE(OBM_RGARROWD)    }
-- % , OBM_LFARROWD     = { MAKEINTRESOURCE(OBM_LFARROWD)    }
-- % , OBM_MNARROW      = { MAKEINTRESOURCE(OBM_MNARROW)     }
-- % , OBM_COMBO        = { MAKEINTRESOURCE(OBM_COMBO)       }
-- % , OBM_UPARROWI     = { MAKEINTRESOURCE(OBM_UPARROWI)    }
-- % , OBM_DNARROWI     = { MAKEINTRESOURCE(OBM_DNARROWI)    }
-- % , OBM_RGARROWI     = { MAKEINTRESOURCE(OBM_RGARROWI)    }
-- % , OBM_LFARROWI     = { MAKEINTRESOURCE(OBM_LFARROWI)    }
-- % , OBM_OLD_CLOSE    = { MAKEINTRESOURCE(OBM_OLD_CLOSE)   }   
-- % , OBM_SIZE         = { MAKEINTRESOURCE(OBM_SIZE)        }
-- % , OBM_OLD_UPARROW  = { MAKEINTRESOURCE(OBM_OLD_UPARROW) }   
-- % , OBM_OLD_DNARROW  = { MAKEINTRESOURCE(OBM_OLD_DNARROW) }   
-- % , OBM_OLD_RGARROW  = { MAKEINTRESOURCE(OBM_OLD_RGARROW) }   
-- % , OBM_OLD_LFARROW  = { MAKEINTRESOURCE(OBM_OLD_LFARROW) }   
-- % , OBM_BTSIZE       = { MAKEINTRESOURCE(OBM_BTSIZE)      }
-- % , OBM_CHECK        = { MAKEINTRESOURCE(OBM_CHECK)       }
-- % , OBM_CHECKBOXES   = { MAKEINTRESOURCE(OBM_CHECKBOXES)  }   
-- % , OBM_BTNCORNERS   = { MAKEINTRESOURCE(OBM_BTNCORNERS)  }   
-- % , OBM_OLD_REDUCE   = { MAKEINTRESOURCE(OBM_OLD_REDUCE)  }   
-- % , OBM_OLD_ZOOM     = { MAKEINTRESOURCE(OBM_OLD_ZOOM)    }
-- % , OBM_OLD_RESTORE  = { MAKEINTRESOURCE(OBM_OLD_RESTORE) }   
-- % ]

----------------------------------------------------------------
-- Raster Ops
----------------------------------------------------------------


type RasterOp3 = Word32
type RasterOp4 = Word32

foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_sRCCOPY"     sRCCOPY :: RasterOp3
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_sRCPAINT"    sRCPAINT :: RasterOp3
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_sRCAND"      sRCAND :: RasterOp3
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_sRCINVERT"   sRCINVERT :: RasterOp3
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_sRCERASE"    sRCERASE :: RasterOp3
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_nOTSRCCOPY"  nOTSRCCOPY :: RasterOp3
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_nOTSRCERASE" nOTSRCERASE :: RasterOp3
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_mERGECOPY"  mERGECOPY :: RasterOp3
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_mERGEPAINT" mERGEPAINT :: RasterOp3
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_pATCOPY"   pATCOPY   :: RasterOp3
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_pATPAINT"  pATPAINT  :: RasterOp3
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_pATINVERT" pATINVERT :: RasterOp3
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_dSTINVERT" dSTINVERT :: RasterOp3
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_bLACKNESS" bLACKNESS :: RasterOp3
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_wHITENESS" wHITENESS :: RasterOp3
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_mAKEROP4" mAKEROP4 :: RasterOp3 -> RasterOp3 -> RasterOp4

----------------------------------------------------------------
-- BITMAP
----------------------------------------------------------------

type BITMAP =
  ( LONG    -- bmType
  , LONG    -- bmWidth
  , LONG    -- bmHeight
  , LONG    -- bmWidthBytes
  , WORD    -- bmPlanes   
  , WORD    -- bmBitsPixel
  , LPVOID  -- bmBits
  )


type LPBITMAP = Addr

setBITMAP :: LPBITMAP -> BITMAP -> IO ()
setBITMAP arg1 gc_arg1 =
  case gc_arg1 of { (gc_arg2,gc_arg3,gc_arg4,gc_arg5,gc_arg6,gc_arg7,gc_arg8) ->
  prim_setBITMAP arg1 gc_arg2 gc_arg3 gc_arg4 gc_arg5 gc_arg6 gc_arg7 gc_arg8}
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_setBITMAP" prim_setBITMAP :: Addr -> Int32 -> Int32 -> Int32 -> Int32 -> Word16 -> Word16 -> Addr -> IO ()

marshall_bITMAP_ :: BITMAP -> IO LPBITMAP
marshall_bITMAP_ bmp = do
  lpbmp <- malloc sizeofBITMAP
  setBITMAP lpbmp bmp
  return lpbmp

----------------------------------------------------------------
-- Misc
----------------------------------------------------------------

deleteBitmap :: HBITMAP -> IO ()
deleteBitmap arg1 =
  prim_deleteBitmap arg1
  >>= \ gc_result ->
  access_prim_deleteBitmap_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_deleteBitmap_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_deleteBitmap" prim_deleteBitmap :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_deleteBitmap_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_deleteBitmap_gc_failstring :: Addr -> IO (Addr)

createCompatibleBitmap :: HDC -> Int32 -> Int32 -> IO HBITMAP
createCompatibleBitmap arg1 arg2 arg3 =
  prim_createCompatibleBitmap arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_createCompatibleBitmap_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_createCompatibleBitmap_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_createCompatibleBitmap_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_createCompatibleBitmap" prim_createCompatibleBitmap :: Addr -> Int32 -> Int32 -> IO (Addr)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_createCompatibleBitmap_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_createCompatibleBitmap_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_createCompatibleBitmap_gc_failstring :: Addr -> IO (Addr)

createBitmap :: INT -> INT -> UINT -> UINT -> MbLPVOID -> IO HBITMAP
createBitmap arg1 arg2 arg3 arg4 arg5 =
  (case arg5 of {
      Nothing -> (return (nullAddr));
      (Just arg5) -> (return ((arg5)))
   }) >>= \ (arg5) ->
  prim_createBitmap arg1 arg2 arg3 arg4 arg5
  >>= \ gc_result ->
  access_prim_createBitmap_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_createBitmap_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_createBitmap_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_createBitmap" prim_createBitmap :: Int32 -> Int32 -> Word32 -> Word32 -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_createBitmap_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_createBitmap_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_createBitmap_gc_failstring :: Addr -> IO (Addr)

createBitmapIndirect :: LPBITMAP -> IO HBITMAP
createBitmapIndirect arg1 =
  prim_createBitmapIndirect arg1
  >>= \ gc_result ->
  access_prim_createBitmapIndirect_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_createBitmapIndirect_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_createBitmapIndirect_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_createBitmapIndirect" prim_createBitmapIndirect :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_createBitmapIndirect_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_createBitmapIndirect_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_createBitmapIndirect_gc_failstring :: Addr -> IO (Addr)

createDIBPatternBrushPt :: LPVOID -> ColorFormat -> IO HBRUSH
createDIBPatternBrushPt arg1 arg2 =
  prim_createDIBPatternBrushPt arg1 arg2
  >>= \ gc_result ->
  access_prim_createDIBPatternBrushPt_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_createDIBPatternBrushPt_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_createDIBPatternBrushPt_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_createDIBPatternBrushPt" prim_createDIBPatternBrushPt :: Addr -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_createDIBPatternBrushPt_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_createDIBPatternBrushPt_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_createDIBPatternBrushPt_gc_failstring :: Addr -> IO (Addr)

----------------------------------------------------------------
-- Querying
----------------------------------------------------------------

getBitmapDimensionEx :: HBITMAP -> IO SIZE
getBitmapDimensionEx h =
  prim_getBitmapDimensionEx h
  >>= \ gc_result ->
  access_prim_getBitmapDimensionEx_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_getBitmapDimensionEx_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_getBitmapDimensionEx_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getBitmapDimensionEx_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return ((gc_res1,gc_res2)))
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_getBitmapDimensionEx" prim_getBitmapDimensionEx :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBitmapDimensionEx_gc_res1 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBitmapDimensionEx_gc_res2 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBitmapDimensionEx_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBitmapDimensionEx_gc_failstring :: Addr -> IO (Addr)
